src/test/ui/parser/empty-impl-semicolon.stderr
error: expected one of `!`, `(`, `+`, `::`, `<`, `for`, `where`, or `{`, found `;`
  --> $DIR/empty-impl-semicolon.rs:1:9
   |
LL | impl Foo;
   |         ^ expected one of 8 possible tokens here

error: aborting due to previous error

