src/test/ui/parser/empty-impl-semicolon.rs
impl Foo; //~ ERROR expected one of `!`, `(`, `+`, `::`, `<`, `for`, `where`, or `{`, found `;`
